Fixed stretching issue with fgl1

--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -47,6 +47,8 @@ canvas {
     position: absolute;
     left: 0;
     bottom: 0;
+    width: 100%;
+    height: 100%;
     z-index: 2;
 }
 
